--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -21,51 +21,61 @@ No caso específico do *Bazel*, os principais recursos são intensivamente testa
 
 ## Grau de Testabilidade ##
 
-Esta propriedade extrínseca indica o grau de testabilidade que um determinado *software* suporta. Quanto maior for a capacidade de teste, mais fácil é encontrar falhas no sistema.
+O grau de testabilidade é uma propriedade extrínseca que indica o grau de testabilidade que um determinado *software* suporta. Quanto maior for a capacidade de teste, mais facilmente se encontram falhas no sistema.
 
-Apesar do *Bazel* ser utilizado para definir automaticamente testes unitários em várias linguagens, é também alvo de testes, que validam e verificam a sua funcionalidade.
+Apesar do *Bazel* ser utilizado para definir automaticamente testes unitários em várias linguagens, é também alvo de testes, que validam e verificam a sua funcionalidade. Como se sabe, o *Bazel* é um compilador. É relativamente simples testar as componentes separadamente, pois não existe uma componente gráfica complexa (apenas linha de comandos). Para isso, basta verificar que o output é igual ao resultado esperado, sem ser preciso nenhuma interação com o utilizador.
 
-O Bazel é, resumidamente, um compilador. Para testar as componentes separadamente é relativamente simples, pois não existe uma componente gráfica complexa (apenas linha de comandos). Assim, basta verificar que o output é igual ao resultado esperado sem ser preciso nenhuma interação com o utilizador (ao contrário do teste de algumas funções dos jogos). Contudo, o Bazel, na sua versão final, irá comunicar com as componentes em conjunto. Por conseguinte, é necessário fazer testes em conjunto em que um teste começa num componente e estende-se a outro. Veja-se o exemplo da linha de comandos ter uma comunicação bidirecional com a *Java Native Interface*. Concluindo, testar o comportamento das componentes em conjunto acaba por se revelar uma tarefa um pouco complicada.
+A versão final do *Bazel* irá comunicar com as componentes em conjunto. Para isso, é necessário fazer testes em conjunto, em que um teste começa num componente e estende-se a outro. Veja-se o exemplo da linha de comandos ter uma comunicação bidirecional com a *Java Native Interface*. No entanto, testar o comportamento das componentes em conjunto acaba por se revelar uma tarefa ligeiramente complicada.
 
 ### Controlabilidade ###
 
-Representa o grau de possibilidade de controlo do componente sob teste (CUT - *Component Under Test*).
+A controlabilidade representa o grau de possibilidade de controlo do componente sob teste (CUT - *Component Under Test*).
 
-Aqui, tendo em conta a complexidade do *Bazel*, a controlabilidade depende do componente que nos queiramos referimos.
+Tendo em conta a complexidade do *Bazel*, a controlabilidade depende do componente que nos queiramos referimos. As componentes, se testadas separadamente são relativamente simples de controlar. O grau de dificuldade prende-se principalmente com o grau de entendimento que o programador tem com o programa. Assim, um programador que acompanhou o progresso do *software* desde o início, terá mais facilidade. Contudo, existem componentes que são mais difíceis de controlar por dependerem de ficheiros externos do utilizador. Neste caso, o programador tem de testar vários casos de teste para verificar a sua operabilidade, não se pode testar só os casos principais.
 
-As componentes se testadas separadamente são relativamente simples de controlar (CUT - Component Under Test). O grau de dificuldade prende-se principalmente com o grau de entendimento que o programador tem com o programa. Assim, para um programador que acompanhou o progresso do *software* desde o início terá mais facilidade. Contudo, existem componentes que são mais difíceis de controlar por dependerem de ficheiros externos do utilizador. Neste caso, o programador tem de testar variados casos de teste para verificar a sua operabilidade em vez de testar só os casos principais. Atenta-se o exemplo: o Bazel pretende compilar grandes (e complexos) projetos em diversas linguagens de programação, assim é preciso testar todas estas combinações (C++ e Java, só Java, só C, entre outros).
+Veja-se o exemplo: o *Bazel* pretende compilar grandes e complexos projetos em diversas linguagens de programação, para isso é preciso testar todas estas combinações (C++ e Java, só Java, só C, entre outros).
 
 ### Observabilidade ###
 
 Através da observabilidade, sabe-se o grau de possibilidade para determinar os resultados intermédios e finais dos testes.
 
-Os resultados dos testes obtêm-se através da compilação em ambiente Linux ou Mac. É possível correr os *scripts* para os testes unitários no Eclipse e no IntelliJ e analisar facilmente os resultados obtidos.
+Os resultados dos testes obtêm-se através da compilação em ambiente Linux ou Mac. É possível correr os *scripts* para os testes unitários no Eclipse e no IntelliJ e analisar, facilmente, os resultados obtidos.
 
-Para um *pull request* ser aceite pelo master, é preciso que o código (funções) feito tenha vários casos de teste [Patch Acceptance Process](http://bazel.io/contributing.html) e que não altere negativamente o funcionamento global do programa. Deste modo, as futuras funções a ser implementadas podem ser feitas sabendo que o código base está certo e se os testes falharem, então alguma das novas funções está a alterar negativamente o comportamento do programa. Como o Bazel ainda está numa fase beta, então a cada *pull request* são executados todos os testes unitários de novo.
+Para um *pull request* ser aceite pelo master, é preciso que o código tenha vários casos de teste [Patch Acceptance Process](http://bazel.io/contributing.html) e que não altere, negativamente, o funcionamento global do programa. Deste modo, as futuras funções a ser implementadas podem ser feitas sabendo que o código base está certo. Se depois os testes falharem, então alguma das novas funções está a alterar negativamente o comportamento do programa.
+
+Como o *Bazel* ainda está numa fase beta, a cada *pull request* são executados todos os testes unitários de novo.
 
 ### Isolabilidade ###
 
 A isolabilidade representa o grau com que cada componente (CUT) pode ser testado isoladamente.
 
-No Bazel, as componentes comunicam entre si, logo é difícil isolar uma componente das restantes. Contudo, é possível testar as funções que cada componente deve fazer dentro de si sem necessidade de componentes externos como saber quais foram os ficheiros modificados e, consequentemente, necessitam de ser compilados. Assim, a componente sob teste (CUT) apenas pode ser testada parcialmente para ser de maneira isolada.
+No *Bazel*, as componentes comunicam entre si. Assim, é difícil isolar uma componente das restantes. Contudo, é possível testar as funções de cada componente, sem necessidade de componentes externos. Consideram-se componentes externos os ficheiros modificados que necessitem consequentemente de ser compilados.
+
+A componente sob teste (CUT) apenas pode ser testada isoladamente, de forma parcial.
 
 ### Separação de responsabilidades ###
 
 A separação de responsabilidades é importante para determinar se o componente sob teste (CUT) tem uma responsabilidade única, bem definida.
 
-Foi estudado no relatório anterior a estrutura do Bazel e da maneira como estava organizado. Cada componente tem responsabilidades bem definidas. As componentes só comunicam entre si quando necessário, pois a eficácia é crucial neste projeto. Assim, as responsabilidades de cada componente são:
-- Command-Line Interface (C++): interface com o utilizador na linha de comandos. É responsável por lidar com os pedidos do utilizador e executa os respetivos pedidos através da comunicação com outras componentes.
-- [Protocol Buffers](https://developers.google.com/protocol-buffers/?hl=pt-PT): permite a utilização de várias linguagens de programação (neste caso C++ e Java) através da definição das mesmas estruturas.
-- [Java Native Interface](https://en.wikipedia.org/wiki/Java_Native_Interface): interface de comunicação entre C++ e Java. É responsável por "converter" os pedidos de uma linguagem para a outra (bidirecional).
-- Core: componente mais importante do Bazel. É responsável por saber quais os ficheiros que necessitam de ser compilados e, se necessário, recompilar.
+No relatório anterior foi estudada a estrutura e a organização do *Bazel*. Cada componente tem responsabilidades bem definidas e só comunica com outra quando necessário, já que a eficácia é crucial neste projeto. Assim, as responsabilidades de cada componente são:
+- *Command-Line Interface* (C++): interface com o utilizador na linha de comandos. É responsável por lidar com os pedidos do utilizador e executa os respetivos pedidos através da comunicação com outras componentes.
+- [*Protocol Buffers*](https://developers.google.com/protocol-buffers/?hl=pt-PT): permite a utilização de várias linguagens de programação (neste caso C++ e Java) através da definição das mesmas estruturas.
+- [*Java Native Interface*](https://en.wikipedia.org/wiki/Java_Native_Interface): interface de comunicação entre C++ e Java. É responsável por "converter" os pedidos de uma linguagem para a outra (bidirecional).
+- *Core*: componente mais importante do *Bazel*. É responsável por saber quais os ficheiros que necessitam de ser compilados e, se necessário, recompilar.
 
 ### Inteligibilidade ###
 
 Através deste fator, obtemos o grau com que cada componente sob teste é documentado e autoexplicativo.
 
+Depois de uma cuidada análise ao código fonte e aos testes associados a ele, entende-se facilmente como os testes se processam e a que componente é associado cada teste. Assume-se por isso que o *Bazel* tem os testes devidamente documentados e que o nome do teste é autoexplicativo. Em caso de falha, isto permite ao programador uma rápida deteção da localização do erro.
+
 ### Heterogeneidade ###
 
 Determina o grau que o uso de diversas tecnologias requer para usar diversos métodos de ensaio e ferramentas em paralelo.
+
+Como já se percebeu anteriormente, o *Bazel* utiliza uma heterogeneidade de linguagens, plataformas e estilos de desenvolvimento. Assim, são utilizadas tecnologias que permitem fazer testes a todas os componentes. Os principais recursos (C++, Java e Shell) são muito usadas dentro da *Google*, por isso, todas as funções são facilmente testadas.
+
+Numa ferramenta que utiliza diversos recursos, é essencial que todos sejam devidamente testados.
 
 ## Estatísticas de Teste ##
 
