--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -98,7 +98,7 @@ Como se pode ver na imagem acima os testes cobrem grande parte do código: cerca
 
 ### Testes de integração ###
 
-A integração dos dois principais módulos do projecto (a CLI e a *Skyframe*) é feita pelo módulo *Java native interfaces*. Não são realizados quaisquer tipos de testes para garantir uma boa comunicação entre as duas linguagens de programação. No entanto, a perfeita integração dos testes é garantida pelos [protocol buffers](https://github.com/Digas29/bazel/blob/master/ESOF-docs/3.%20Architectural%20design.md#logical-view) utilizados por ambas as linguagens. As regras para comunicação são neles definidos sendo possível à CLI a infromação que tem ser enviada e retornada e à *Skyframe* saber que informação vai ser recebida e que tem se ser retornada. 
+A integração dos dois principais módulos do projecto (a CLI e a *Skyframe*) é feita pelo módulo *Java native interfaces*. Não são realizados quaisquer tipos de testes para garantir uma boa comunicação entre as duas linguagens de programação. No entanto, a perfeita integração dos testes é garantida pelos [protocol buffers](https://github.com/Digas29/bazel/blob/master/ESOF-docs/3.%20Architectural%20design.md#logical-view) utilizados por ambas as linguagens. As regras para comunicação são neles definidos sendo possível à CLI a infromação que tem ser enviada e retornada e à *Skyframe* saber que informação vai ser recebida e que tem se ser retornada.
 
 
 ### Testes de sistema ###
@@ -118,24 +118,11 @@ Neste tipo de testes, os testes unitários voltam a ter um papel de extrema rele
 
 ## Correção do *Bug* ##
 
-Known Issues
+Apesar de existirem alguns erros detetados pelos próprios programadores no [*GitHub*](https://github.com/bazelbuild/bazel/issues), é impossível para nós contribuir para uma resolução dos mesmos. Essa nossa incapacidade para contribuir prende-se, essencialmente, com as restrições estabelecidas pela equipa de programadores, na página destinada às [contribuições](http://bazel.io/contributing.html).  
 
-The version of the Closure Templates compiler that is used will emit warnings about protected property access and about a missing enum value. These issues have been fixed in the source, but are not yet available as a downloadable archive. These warnings are safe to ignore.
+Em geral, os responsáveis preferem contribuições a correções de erros e acrescento de funcionalidade. No entanto, em qualquer uma dessas hipóteses, somos obrigados a ler o plano de regras, discutir a nossa contribuição e respetiva implementação. Em caso de sermos aceites, somos adicionados à lista de contribuidores e obrigados a fazer *commit* da solução, juntamente com testes que a compróvem.
 
-You may define a newlocalrepository target if you wish to check out the source from Github yourself. Otherwise you may wish to wait until the Closure tools are available as Bazel workspaces. e.g.
-
-```
-new_local_repository(
-    name = "closure_templates",
-    build_file = "tools/build_rules/closure/closure_templates.BUILD",
-    path = "/home/user/src/github/google/closure-templates/target",
-)
-```
-
-ou
-
-Procurar no LINK ISSUES
-
+Em suma, concluímos que o nosso projeto não permite a plena realização deste tópico, tal como foi pedido. 
 
 ## Referências ##
 
