--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -79,8 +79,8 @@ Numa ferramenta que utiliza diversos recursos, é essencial que todos sejam devi
 
 ## Estatísticas de Teste ##
 
-As estatísticas resultam de casos de testes representativos para estimar o valor de uma métrica de qualidade de *software*. Determinam a eficiência e a fiabilidade do sistema. No Bazel, o código aceite tem que obedecer a [condições rigorosas](http://bazel.io/governance.html#core-contributors) em que só é aceite código bem escrito e testado (este escrutínio pode não acontecer em casos excecionais).
-Visto tratar-se de um projecto de grande dimensão apenas se dará destaque às estatísticas do *package Skyframe*.
+As estatísticas resultam de casos de testes representativos para estimar o valor de uma métrica de qualidade de *software*. Determinam a eficiência e a fiabilidade do sistema. No *Bazel*, o código aceite tem que obedecer a [condições rigorosas](http://bazel.io/governance.html#core-contributors) em que só é aceite código bem escrito e testado (este escrutínio pode não acontecer em casos excecionais).
+Visto tratar-se de um projeto de grande dimensão apenas se dará destaque às estatísticas do *package Skyframe*.
 
 ### Testes unitários ###
 
@@ -88,7 +88,7 @@ Visto tratar-se de um projecto de grande dimensão apenas se dará destaque às 
 
 Como se pode ver todos os testes são concluídos com sucesso. Isto não é um indicativo de que a qualidade do código é boa, mas é um indicador que todos os testes resultaram no resultado esperado. Após uma análise cuidada do código de teste, onde se encontraram sucessivas verificações de acerto, pode-se afirmar que a *Skyframe* tem um comportamento consistente e preparado para responder a diversas situações.
 
-### Cubertura de código ###
+### Cobertura de código ###
 
 ![Skyframe Testing Coverage](Resources/coverage.png)
 
@@ -98,13 +98,13 @@ Como se pode ver na imagem acima os testes cobrem grande parte do código: cerca
 
 ### Testes de integração ###
 
-A integração dos dois principais módulos do projecto (a CLI e a *Skyframe*) é feita pelo módulo *Java native interfaces*. Não são realizados quaisquer tipos de testes para garantir uma boa comunicação entre as duas linguagens de programação. No entanto, a perfeita integração dos testes é garantida pelos [protocol buffers](https://github.com/Digas29/bazel/blob/master/ESOF-docs/3.%20Architectural%20design.md#logical-view) utilizados por ambas as linguagens. As regras para comunicação são neles definidos sendo possível à CLI a infromação que tem ser enviada e retornada e à *Skyframe* saber que informação vai ser recebida e que tem se ser retornada.
+A integração dos dois principais módulos do projeto (a CLI e a *Skyframe*) é feita pelo módulo *Java native interfaces*. Não são realizados quaisquer tipos de testes para garantir uma boa comunicação entre as duas linguagens de programação. No entanto, a perfeita integração dos testes é garantida pelos [protocol buffers](https://github.com/Digas29/bazel/blob/master/ESOF-docs/3.%20Architectural%20design.md#logical-view) utilizados por ambas as linguagens. As regras para comunicação são neles definidos sendo possível à CLI a informação que tem ser enviada e retornada e à *Skyframe* saber que informação vai ser recebida e que tem se ser retornada.
 
 
 ### Testes de sistema ###
 
-Como referido em relatórios anteriores o processo de desenvolvimento de software é bastante informal, sendo por isso que não o sistema não é propriamente testado. Sendo que os requisitos de qualidade são alcançados através do compromisso dos programadores em fazer do *Bazel* o melhor possível.
-O que mais se aproxima de testes de sistema são os utilizadores do *Bazel*, ou seja, também eles programadores que podém melhorar a ferramenta dando *feedback* aos responsáveis pelo projecto.
+Como referido em relatórios anteriores o processo de desenvolvimento de *software* é bastante informal, sendo por isso que não o sistema não é propriamente testado. Sendo que os requisitos de qualidade são alcançados através do compromisso dos programadores em fazer do *Bazel* o melhor possível.
+O que mais se aproxima de testes de sistema são os utilizadores do *Bazel*, ou seja, também eles programadores que podem melhorar a ferramenta dando *feedback* aos responsáveis pelo projeto.
 
 
 ### Testes de aceitação ###
@@ -114,7 +114,7 @@ Como já referimos em relatórios anteriores, o cliente deste produto é o próp
 ### Testes de regressão ###
 
 Sempre que uma alteração é proposta, um *core contributor* fica responsável por testá-la e avaliá-la. Uma das suas preocupações é que esta alteração não provoque erros nas restantes funções implementadas. Assim, a execução de testes de uma parte seletiva é sempre feita a cada importante alteração (como *pull requests* por exemplo).
-Neste tipo de testes, os testes unitários voltam a ter um papel de extrema relevancia, visto que estes permitem verificar o impacto das alterações.
+Neste tipo de testes, os testes unitários voltam a ter um papel de extrema relevância, visto que estes permitem verificar o impacto das alterações.
 
 ## Correção do *Bug* ##
 
@@ -122,7 +122,7 @@ Apesar de existirem alguns erros detetados pelos próprios programadores no [*Gi
 
 Em geral, os responsáveis preferem contribuições a correções de erros e acrescento de funcionalidade. No entanto, em qualquer uma dessas hipóteses, somos obrigados a ler o plano de regras, discutir a nossa contribuição e respetiva implementação. Em caso de sermos aceites, somos adicionados à lista de contribuidores e obrigados a fazer *commit* da solução, juntamente com testes que a compróvem.
 
-Em suma, concluímos que o nosso projeto não permite a plena realização deste tópico, tal como foi pedido. 
+Em suma, concluímos que o nosso projeto não permite a plena realização deste tópico, tal como foi pedido.
 
 ## Referências ##
 
