--- a/ESOF-docs/5. Software Evolution.md
+++ b/ESOF-docs/5. Software Evolution.md
@@ -13,7 +13,7 @@
 
 ## Introdução ##
 
-
+Neste relatório vamos mostrar qual a *feature* escolhida a ser evoluída e mais alguns detalhes acerca da sua implementação. Na escolha da *feature* a ser evoluída deparamo-nos com algumas dificuldades, pois o [Bazel](http://bazel.io/) é um projeto recente em que ainda falta uma grande parte de desenvolvimento para estar concluído até [Dezembro de 2016](http://bazel.io/roadmap.html).
 
 ## *Feature* a ser evoluída ##
 
@@ -56,4 +56,4 @@ Turma 1 - Grupo 4
 
 Faculdade de Engenharia da Universidade do Porto
 
-6 de dezembro de 2015
+13 de dezembro de 2015
