Correção da introdução

--- a/ESOF-docs/5. Software Evolution.md
+++ b/ESOF-docs/5. Software Evolution.md
@@ -13,11 +13,11 @@
 
 ## Introdução ##
 
-Neste relatório vamos mostrar qual a *feature* escolhida a ser evoluída e mais alguns detalhes acerca da sua implementação. Na escolha da *feature* a ser evoluída deparamo-nos com algumas dificuldades, pois o [Bazel](http://bazel.io/) é um projeto recente em que ainda falta uma grande parte de desenvolvimento para estar concluído até [Dezembro de 2016](http://bazel.io/roadmap.html).
+Neste relatório vamos mostrar qual a *feature* escolhida a ser evoluída e mais alguns detalhes acerca da sua implementação. Na escolha da *feature* a ser evoluída deparamo-nos com algumas dificuldades, pois o [Bazel](http://bazel.io/) é um projeto recente em que ainda falta uma grande parte de desenvolvimento para estar concluído até [Dezembro de 2016](http://bazel.io/roadmap.html). Contudo, conseguimos encontrar um *feature request* fazível das [*issues*](https://github.com/bazelbuild/bazel/issues?utf8=%E2%9C%93&q=) após uma [conversa](https://groups.google.com/forum/#!topic/bazel-discuss/w9s67MxI21E) com os responsáveis do projeto. A *feature* escolhida é a [#600](https://github.com/bazelbuild/bazel/issues/600).
 
 ## *Feature* a ser evoluída ##
 
-Identificar uma feature que deva ser evoluida
+
 
 ## Componentes que implementam essa *feature* ##
 
