--- a/ESOF-docs/5. Software Evolution.md
+++ b/ESOF-docs/5. Software Evolution.md
@@ -12,16 +12,15 @@
 
 ## Introdução ##
 
-Neste relatório vamos mostrar qual a *feature* escolhida a ser evoluída e mais alguns detalhes acerca da sua implementação. Na escolha da *feature* a ser evoluída deparamo-nos com algumas dificuldades, pois o [Bazel](http://bazel.io/) é um projeto recente em que ainda falta uma grande parte de desenvolvimento para estar concluído até [Dezembro de 2016](http://bazel.io/roadmap.html). Contudo, conseguimos encontrar um *feature request* fazível das [*issues*](https://github.com/bazelbuild/bazel/issues?utf8=%E2%9C%93&q=) após uma [conversa](https://groups.google.com/forum/#!topic/bazel-discuss/w9s67MxI21E) com os responsáveis do projeto.
+Neste relatório vamos mostrar qual a *feature* escolhida que foi evoluída e mais alguns detalhes acerca da sua implementação. Ao fazermos esta escolha deparamo-nos com algumas dificuldades, pois o [Bazel](http://bazel.io/) é um projeto recente em que ainda falta uma grande parte de desenvolvimento para estar concluído até [Dezembro de 2016](http://bazel.io/roadmap.html). Contudo, conseguimos encontrar um *feature request* fazível das [*issues*](https://github.com/bazelbuild/bazel/issues?utf8=%E2%9C%93&q=) após uma [conversa](https://groups.google.com/forum/#!topic/bazel-discuss/w9s67MxI21E) com os responsáveis do projeto.
 
 ## *Feature* a ser evoluída ##
 
 A *feature* escolhida é a [*The message "Failed to open Bazel as a zip file" should recommend not stripping an executable #600*](https://github.com/bazelbuild/bazel/issues/600) que surgiu da necessidade do Bazel apresentar um erro mais concreto e correto do que o erro genérico atual. Antigamente, a mensagem apresentada era pouco explicita para o utilizador acabando mesmo por ser errada no caso dos executáveis serem [*stripped*](https://en.wikipedia.org/wiki/Strip_(Unix)).
 
-
 ## Componentes que implementam essa *feature* ##
 
-Para implementar esta *feature* foi necessário o componente *Command-Line Interface* que está na linguagem de programação C++.
+Para implementar esta *feature* foi necessário alterar o componente *Command-Line Interface* que está na linguagem de programação C++.
 
 ## Evolução e Submissão da *feature* ##
 
