--- a/ESOF-docs/1. Software Process.md
+++ b/ESOF-docs/1. Software Process.md
@@ -9,7 +9,7 @@ Everyone is welcome to support the project, but it is required to fulfill all th
 ## Software Process ##
 
 The software process used in Bazel project is "Incremental development and delivery". After a brief conversation with the contributors of this project, they stated that the [Bazaar model] (https://en.wikipedia.org/wiki/The_Cathedral_and_the_Bazaar) is a good description of the software process used, and that usually falls under the Agile methodology category. They also claimed that Google uses OKRs for planning and expressing what the company, a team and each individual engineer wants to focus on in the next quarter. A good presentation about this process can be found on the [Google Ventures] (http://www.gv.com/lib/how-google-sets-goals-objectives-and-key-results-okrs) website.
-Incremental development and delevery process constructs the system in increments and evaluates each increment before proceeding to the development of the next increment.
+Incremental development and delivery process constructs the system in increments and evaluates each increment before proceeding to the development of the next increment.
 
 ## Comment about Software Process used ##
 
