--- a/ESOF-docs/1. Software Process.md
+++ b/ESOF-docs/1. Software Process.md
@@ -1,5 +1,18 @@
-# ESOF #
+# Report 1 - Software Process #
 
+**Content**
+- [Software Process](#Report-1---Software-Process)
+	- [Introduction](#introdução)
+	- [Project description](#project-description)
+	- [Software Process](#software-process)
+	- [Comment about Software Process used](#comment-about-software-process-used)
+	- [References](#references)
+	- [Contributions](#contributions)
+	- [Authors](#authors)
+
+## Introduction ##
+
+After a couple mails exchange with the developers we concluded that Bazel is a project already in use and is in continuously development aiming to open source the project. In this report, we will explain what Bazel is and development process in use.
 
 ## Project description ##
 
@@ -10,6 +23,7 @@ Everyone is welcome to support the project, but it is required to fulfill all th
 
 The software process used in Bazel project is "Incremental development and delivery". After a brief conversation with the contributors of this project, they stated that the [Bazaar model] (https://en.wikipedia.org/wiki/The_Cathedral_and_the_Bazaar) is a good description of the software process used, and that usually falls under the Agile methodology category. They also claimed that Google uses OKRs for planning and expressing what the company, a team and each individual engineer wants to focus on in the next quarter. A good presentation about this process can be found on the [Google Ventures] (http://www.gv.com/lib/how-google-sets-goals-objectives-and-key-results-okrs) website.
 Incremental development and delivery process constructs the system in increments and evaluates each increment before proceeding to the development of the next increment.
+We noticed that the meetings are informal between the programmers. Also, there is the quater reunion to discuss the objects achieved in a more formal situation.
 
 ## Comment about Software Process used ##
 
@@ -31,3 +45,27 @@ Problems:
 further software changes becomes increasingly difficult and costly.
 * It can be hard to identify upfront common facilities that are needed by all increments, so level of reuse may be suboptimal.
 * The nature of incremental development of the specification together with the software may be not be adequate for establishing a development contract at the begin.
+
+## References ##
+
+* Official website: http://bazel.io/
+
+## Contributions ##
+* António Ramadas: 1 hour e 30 minutes.
+* João Guarda: 1 hour e 30 minutes.
+* Rui Vilares: 1 hour e 30 minutes.
+* Trabalho em grupo: 4 hours.
+
+## Authors ##
+
+Turma 1 - Grupo 4
+
+* [António Manuel Vieira Ramadas](https://github.com/antonio-ramadas)
+* [João Diogo Trindade Guarda](https://github.com/Digas29)
+* [Rui Miguel Teixeira Vilares](https://github.com/RuiVilares)
+
+[Engenharia de Software (ESOF)](https://sigarra.up.pt/feup/pt/ucurr_geral.ficha_uc_view?pv_ocorrencia_id=368707)
+
+Faculdade de Engenharia da Universidade do Porto
+
+18 de outubro de 2015
