--- a/ESOF-docs/1. Software Process.md
+++ b/ESOF-docs/1. Software Process.md
@@ -6,6 +6,7 @@
 	- [Project description](#project-description)
 	- [Software Process](#software-process)
 	- [Comment about Software Process used](#comment-about-software-process-used)
+	- [Critical Analysis](#critical-analysis)
 	- [References](#references)
 	- [Contributions](#contributions)
 	- [Authors](#authors)
@@ -46,6 +47,13 @@ further software changes becomes increasingly difficult and costly.
 * It can be hard to identify upfront common facilities that are needed by all increments, so level of reuse may be suboptimal.
 * The nature of incremental development of the specification together with the software may be not be adequate for establishing a development contract at the begin.
 
+## Critical Analysis ##
+
+![Graph](Resources/Graph.png)
+
+As we can see from the graph, the project has been developed consistently since it begun. By the graph, we can also conclude that there's roughly about 75 commits per week. The core developers are the ones that contribute more and have a stronger presence on the chat.
+By the time we wrote this report, there were 270 open issues and 370 closed. The [issues](https://github.com/bazelbuild/bazel/issues) are well tagged and provide a user friendly interaction with what needs to be done. We also checked that each issued (which may be created by the core developers or from a contributor) is well documented and the questions are answered in a short period of time. To conclude, Github has a great [tool](https://github.com/bazelbuild/bazel/pulse/monthly) that smartly resumes the project and sumarizes all said previously.
+
 ## References ##
 
 * Official website: http://bazel.io/
@@ -54,11 +62,11 @@ further software changes becomes increasingly difficult and costly.
 * António Ramadas: 1 hour e 30 minutes.
 * João Guarda: 1 hour e 30 minutes.
 * Rui Vilares: 1 hour e 30 minutes.
-* Trabalho em grupo: 4 hours.
+* Group work: 4 hours.
 
 ## Authors ##
 
-Turma 1 - Grupo 4
+Class 1 - Group 4
 
 * [António Manuel Vieira Ramadas](https://github.com/antonio-ramadas)
 * [João Diogo Trindade Guarda](https://github.com/Digas29)
@@ -68,4 +76,4 @@ Turma 1 - Grupo 4
 
 Faculdade de Engenharia da Universidade do Porto
 
-18 de outubro de 2015
+18 october 2015
