--- a/ESOF-docs/5. Software Evolution.md
+++ b/ESOF-docs/5. Software Evolution.md
@@ -24,21 +24,23 @@ Para implementar esta *feature* foi necessário alterar o componente *Command-Li
 
 ## Evolução e Submissão da *feature* ##
 
---------------------------------------------------------------------------
---------------------------------------------------------------------------
---------------------------------------------------------------------------
-------------------------ALTERAR O LINK DE "AQUI"--------------------------
---------------------------------------------------------------------------
---------------------------------------------------------------------------
---------------------------------------------------------------------------
-Para a submissão desta *feature* foi necessário seguir o [Patch Acceptance Process](http://bazel.io/contributing.html). A evolução e respetiva submissão pode ser consultada [aqui](https://www.youtube.com/watch?v=OWFBqiUgspg).
---------------------------------------------------------------------------
---------------------------------------------------------------------------
---------------------------------------------------------------------------
-------------------------ALTERAR O LINK DE "AQUI"--------------------------
---------------------------------------------------------------------------
---------------------------------------------------------------------------
---------------------------------------------------------------------------
+
+Para a submissão desta *feature* foi necessário seguir o [Patch Acceptance Process](http://bazel.io/contributing.html). A evolução e respetiva submissão pode ser consultada [aqui](https://bazel-review.googlesource.com/#/c/2540/) e a discussão sobre a feature [aqui] (https://groups.google.com/forum/#!topic/bazel-discuss/w9s67MxI21E). Ao contrário de outros projectos no bazel não são feitos pull requests mas são criados code reviews no Gerrit. Esta ferramenta permite um maior controlo do código que é submetido e aproxima mais as os contribuidores com os *core contributors*.
+
+### *Patch Acceptance Process* ###
+
+Para contribuir para o bazel temos de seguir os seguintes passos:
+1. Ler o [Bazel governance plan](http://bazel.io/governance.html)
+2. Discutir o plano e o desing daquilo que será desenvolvido, e ser aceite na lista de [emails do bazel](https://groups.google.com/forum/#!forum/bazel-dev)
+3. Preparar o commit com o as alterações.
+4. Assinar a CLA da Google.
+5. Criar um novo *code review* no [Gerrit](https://bazel-review.googlesource.com/):
+```
+$ git push https://bazel.googlesource.com/bazel HEAD:refs/for/master
+```
+6. Completar o *code review* com um *core contributor* e fazer as alterações necessárias.
+7. Um engenheiro aplica o *patch* ao sistema de controlo de versões interno da Google.
+8. O *patch* é exportado como um *Git commit*, e o *code review* no Gerrit é fechado.
 
 ## Referências ##
 
