--- a/ESOF-docs/5. Software Evolution.md
+++ b/ESOF-docs/5. Software Evolution.md
@@ -30,17 +30,20 @@ Para a submissão desta *feature* foi necessário seguir o [Patch Acceptance Pro
 ### *Patch Acceptance Process* ###
 
 Para contribuir para o bazel temos de seguir os seguintes passos:
-1. Ler o [Bazel governance plan](http://bazel.io/governance.html)
-2. Discutir o plano e o desing daquilo que será desenvolvido, e ser aceite na lista de [emails do bazel](https://groups.google.com/forum/#!forum/bazel-dev)
-3. Preparar o commit com o as alterações.
-4. Assinar a CLA da Google.
-5. Criar um novo *code review* no [Gerrit](https://bazel-review.googlesource.com/):
+
+1. Ler o [Bazel governance plan](http://bazel.io/governance.html);
+2. Discutir o plano e o desing daquilo que será desenvolvido, e ser aceite na lista de [emails do bazel](https://groups.google.com/forum/#!forum/bazel-dev);
+3. Preparar o commit com o as alterações;
+4. Assinar a CLA da Google;
+5. Criar um novo *code review* no [Gerrit](https://bazel-review.googlesource.com/);
+6. Completar o *code review* com um *core contributor* e fazer as alterações necessárias;
+7. Um engenheiro aplica o *patch* ao sistema de controlo de versões interno da Google;
+8. O *patch* é exportado como um *Git commit*, e o *code review* no Gerrit é fechado;
+
+No passo 5 é utilizado o seguinte comando:
 ```
 $ git push https://bazel.googlesource.com/bazel HEAD:refs/for/master
 ```
-6. Completar o *code review* com um *core contributor* e fazer as alterações necessárias.
-7. Um engenheiro aplica o *patch* ao sistema de controlo de versões interno da Google.
-8. O *patch* é exportado como um *Git commit*, e o *code review* no Gerrit é fechado.
 
 ## Referências ##
 
