Introdução do esforço em cada relatório

--- a/ESOF-docs/2. Requirements Management.md
+++ b/ESOF-docs/2. Requirements Management.md
@@ -12,6 +12,7 @@
 	- [Casos de uso](#casos-de-uso)
 	- [Referências](#referências)
 	- [Contribuições](#contribuições)
+	- [Esforço](#esforço)
 	- [Autores](#autores)
 
 
@@ -79,6 +80,11 @@ As propriedades enumeradas sofrem especial enfoque, na medida em que através da
 * João Guarda: 1 hora e 30 minutos.
 * Rui Vilares: 1 hora e 30 minutos.
 * Trabalho em grupo: 4 horas.
+
+## Esforço ##
+* António Ramadas: 33%.
+* João Guarda: 33%.
+* Rui Vilares: 33%.
 
 ## Autores ##
 
