--- a/ESOF-docs/4. Software tests.md
+++ b/ESOF-docs/4. Software tests.md
@@ -8,6 +8,7 @@
 	- [Correção do *Bug*](#correção-do-bug)
 	- [Referências](#referências)
 	- [Contribuições](#contribuições)
+	- [Esforço](#esforço)
 	- [Autores](#autores)
 
 
@@ -136,6 +137,11 @@ Em suma, concluímos que o nosso projeto não permite a plena realização deste
 * João Guarda: 2 horas.
 * Rui Vilares: 2 horas.
 * Trabalho em grupo: 4 horas.
+
+## Esforço ##
+* António Ramadas: 33%.
+* João Guarda: 33%.
+* Rui Vilares: 33%.
 
 ## Autores ##
 
