--- a/ESOF-docs/5. Software Evolution.md
+++ b/ESOF-docs/5. Software Evolution.md
@@ -8,6 +8,7 @@
   - [Evolução da *feature*](#evolução-e-submissão-da-feature)
   - [Referências](#referências)
   - [Contribuições](#contribuições)
+	- [Esforço](#esforço)
   - [Autores](#autores)
 
 ## Introdução ##
@@ -57,6 +58,11 @@ $ git push https://bazel.googlesource.com/bazel HEAD:refs/for/master
 * João Guarda: 2 horas.
 * Rui Vilares: 2 horas.
 * Trabalho em grupo: 4 horas.
+
+## Esforço ##
+* António Ramadas: 33%.
+* João Guarda: 33%.
+* Rui Vilares: 33%.
 
 ## Autores ##
 
