--- a/ESOF-docs/1. Software Process.md
+++ b/ESOF-docs/1. Software Process.md
@@ -9,6 +9,7 @@
 	- [Critical Analysis](#critical-analysis)
 	- [References](#references)
 	- [Contributions](#contributions)
+	- [Effort](#effort)
 	- [Authors](#authors)
 
 ## Introduction ##
@@ -63,6 +64,11 @@ By the time we wrote this report, there were 270 open issues and 370 closed. The
 * João Guarda: 1 hour e 30 minutes.
 * Rui Vilares: 1 hour e 30 minutes.
 * Group work: 4 hours.
+
+## Effort ##
+* António Ramadas: 33%.
+* João Guarda: 33%.
+* Rui Vilares: 33%.
 
 ## Authors ##
 
